update cygwin installation guide

--- a/_posts/2016-06-28-git-101-slides.html
+++ b/_posts/2016-06-28-git-101-slides.html
@@ -282,7 +282,8 @@ date: 2016-06-23
     <img width="378" height="270"
          data-src="{{site.baseurl}}/content_image/git.101.slides/cygwin9.png"
          alt="cygwin">
-    <p>安装: https://cygwin.com/install.html</p>
+    <!--<p>安装: https://cygwin.com/install.html</p>-->
+      <p><a href="{% post_url 2016-07-01-cygwin-setup-for-git %}">安装cygwin下的git环境</a></p>
     <aside class="notes">
       推荐使用命令行.
       统一的术语便于交流
@@ -472,15 +473,15 @@ index 1e1a141..345fef0 100644
 --- a/index.html
 +++ b/index.html
 @@ -284,7 +284,8 @@
-&lt;option value="&lt;U+1F423> &lt;U+1F4A3> &lt;U+1F6A7> ◻️">&lt;U+1F423> &lt;U+1F4A3> &lt;U+1F6A7>&lt;/option>
-&lt;option value="&lt;U+1F370> &lt;U+1F47E> &lt;U+1F4CC> ◻️">&lt;U+1F370> &lt;U+1F47E> &lt;U+1F4CC>&lt;/option>
-&lt;option value="&lt;U+1F337> ⚡️ &lt;U+1F41E> ◻️">&lt;U+1F337> ⚡️ &lt;U+1F41E>&lt;/option>
+          &lt;option value="&lt;U+1F423> &lt;U+1F4A3> &lt;U+1F6A7> ◻️">&lt;U+1F423> &lt;U+1F4A3> &lt;U+1F6A7>&lt;/option>
+          &lt;option value="&lt;U+1F370> &lt;U+1F47E> &lt;U+1F4CC> ◻️">&lt;U+1F370> &lt;U+1F47E> &lt;U+1F4CC>&lt;/option>
+          &lt;option value="&lt;U+1F337> ⚡️ &lt;U+1F41E> ◻️">&lt;U+1F337> ⚡️ &lt;U+1F41E>&lt;/option>
 -         &lt;option value="&lt;U+2B55>️ &lt;U+274C> &lt;U+2757>️ ◻️">&lt;U+2B55>️ &lt;U+274C> &lt;U+2757>️&lt;/option>
 +         &lt;option value="&lt;U+2B55>️ &lt;U+274C> &lt;U+2757>️ ✖️️">&lt;U+2B55>️ &lt;U+274C> &lt;U+2757>️ ✖️&lt;/option>
 +         &lt;option value="☀ ⚡ ☂ ☁️"> ☀ ⚡ ☂ ☁️&lt;/option>
-&lt;/select>
-&lt;button class="js-popup-new-game btn">Restart Game&lt;/button>
-&lt;/div>
+        &lt;/select>
+        &lt;button class="js-popup-new-game btn">Restart Game&lt;/button>
+      &lt;/div>
       </code></pre>
       </section>
 
