--- a/_posts/2016-06-28-git-101-slides.html
+++ b/_posts/2016-06-28-git-101-slides.html
@@ -1223,7 +1223,8 @@ $ git lg
       { src: '/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
       { src: '/reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
       { src: '/reveal/plugin/zoom-js/zoom.js', async: true },
-      { src: '/reveal/plugin/notes/notes.js', async: true }
+      { src: '/reveal/plugin/notes/notes.js', async: true },
+      { src: '/bower_components/reveal.js-menu/menu.js' }
     ]
   });
 
