add mermaid chart support

--- a/_posts/2016-06-28-git-101-slides.html
+++ b/_posts/2016-06-28-git-101-slides.html
@@ -23,7 +23,14 @@ date: 2016-06-23
 
   <!-- Theme used for syntax highlighting of code -->
   <link rel="stylesheet" href="/reveal/lib/css/zenburn.css">
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
+
+  <!-- mermaid -->
+  <link rel="stylesheet" href="/libraries/mermaid/mermaid.dark.css">
+  <script src="/libraries/mermaid/mermaid.js"></script>
+  <script>
+    mermaid.initialize({startOnLoad:true});
+    console.log("mermaid initialized.");
+  </script>
 
 
   <!-- Printing and PDF exports -->
