--- a/_posts/2016-06-26-git-part4-remote.html
+++ b/_posts/2016-06-26-git-part4-remote.html
@@ -292,3 +292,11 @@ $ git checkout 0.1.0
     </div>
   </div>
 </section>
+
+<section>
+  <h2>References</h2>
+  <ul>
+    <li>https://git-scm.com/book/zh/v2/</li>
+    <li>https://cn.udacity.com/course/how-to-use-git-and-github--ud775/</li>
+  </ul>
+</section>
