fix image size for a slide

--- a/_posts/2016-06-26-git-part4-remote.html
+++ b/_posts/2016-06-26-git-part4-remote.html
@@ -147,7 +147,7 @@ $ git branch --all
   </code></pre>
 
   <div class="fragment">
-    <img style="border: none; background: lightyellow"
+    <img height="300px" style="border: none; background: lightyellow"
          src="https://git-scm.com/book/en/v2/book/03-git-branching/images/remote-branches-1.png">
   </div>
   <aside class="notes">
