--- a/en.html
+++ b/en.html
@@ -4,11 +4,11 @@ layout: index
 
 <ul class="posts">
   {% for post in site.posts %}
-    {% if post.language != 'en' %}
+    {% if post.language == 'en' %}
     <li>
       <small class="datetime muted" data-time="{{ post.date }}">{{ post.date | date_to_string }} </small>
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
-    {% endif %}
+    {% endif %} 
   {% endfor %}
 </ul>
